2011-02-25 Thomas Sayre-McCord <thomassm@email.unc.edu>
	* power_law_fitting.m: added. Fits creep data to a power law using linear regression of logarithmic values

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* carreau_model_fit.m:  tweaked parameters for fit.
	* new_carreau_fit.m:  added.  uses matlab's new fitting code.  Intend to retrofit other fitting functions and will use this as the template.

2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* carreau_model_fun.m: removed unneeded computation.

2009-02-03  Jeremy Cribb <jcribb@email.unc.edu>
	* carreau_chhabra_fit.m: added.  fits shear thinning data to carreau-like model used by Chhabra in 2001
	* carreau_chhabra_fun.m: added.  fitting equation for carreau_chhabra_fit.m
	* carreau_model_fit.m:  fixed bounds on fitting parameters.  Works MUCH better.
	* jeffrey_step_fun.m: cosmetic changes to better conform to mlint's suggestions.
	
2008-11-20  Kris Ford <krisford@email.unc.edu>
	* .cvsignore: added .mat files
	* jeffrey_step_fit.m: modified documentation to better match Mathworks convention
	* jeffrey_step_fun.m: same
	* KV_step_fit.m: same
	* KV_step_fun.m: same
	* carreau_model_fit.m: same
	* carreau_model_fun.m: same
	* cross_model_fit.m: same
	* meter_fit.m: same
	* meter_fun.m: same
	* MM_step_fit.m: same
	* MM_step_fun.m: same
	* powerlaw_model_fit.m: same
	* powerlaw_model_fun.m: same
	* stretched_exp_fun.m: same
	* stretched_exponential_fit.m: same
	
2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore added by Kris Ford on 2008-10-28
	* carreau_model_fit.m: explicity set upper and lower bounds.
	* meter_fit.m: added. performs fit for the Meter model (stress dependence).
	* meter_fun.m: added. fitting function for the Meter model (stress dependence).
	* cross_model_fit.m: fixed bug in fitting equation.
	* cross_model_fun.m: same.

2008-10-15  Jeremy Cribb <jcribb@email.unc.edu>
	- carreau_model_fit.m: fixed bug in fitting equation.
	- carreau_model_fun.m: same.
