@@ -30,8 +30,7 @@ function [K, D, R_square] = KV_step_fit(t, y, report)
 	options = optimset('MaxFunEvals', 20000*2, ...
                        'Diagnostics', 'off', ...
                        'TolFun', 1e-13, ...
-                       'MaxIter', 2000, ...
-                       'ShowStatusWindow', 'off');
+                       'MaxIter', 2000);
 
 	% initial guess
     K  = 1 / range(y);
