@@ -28,8 +28,7 @@ function [eta_zero, lambda, n, R_square, eta_apparent_fit] = carreau_chhabra_fit
                        'Diagnostics', 'on', ...
                        'TolFun', 1e-17, ...
                        'MaxIter', 500000, ...
-                       'TolX', 1e-10, ...
-                       'ShowStatusWindow', 'on');
+                       'TolX', 1e-10);
 
 	% initial guess
     n        = 0.2;
