@@ -28,8 +28,7 @@ function [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, e
                        'Diagnostics', 'on', ...
                        'TolFun', 1e-12, ...
                        'MaxIter', 50000, ...
-                       'TolX', 1e-7, ...
-                       'ShowStatusWindow', 'on');
+                       'TolX', 1e-7);
 
 	% initial guess
     m        = -0.8;
