@@ -30,8 +30,7 @@ function [K, D1, D2, R_square] = jeffrey_step_fit(t, y, report)
 	options = optimset('MaxFunEvals', 20000*2, ...
                        'Diagnostics', 'off', ...
                        'TolFun', 1e-13, ...
-                       'MaxIter', 2000, ...
-                       'ShowStatusWindow', 'off');
+                       'MaxIter', 2000);
  K= 0.7;
  D1 =0.07;
  D2 = 15;
